--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
   <head>
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- 1. Load libraries -->
-    <!-- IE required polyfills, in this exact order -->
+    <script src="build/js/vendor.min.js"></script>
+    <link rel="stylesheet" href="build/css/vendor.css">
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
@@ -16,11 +15,11 @@
 
   </head>
 
-  <!-- 3. Display the application -->
+
   <body>
     <my-app>Loading...</my-app>
   </body>
-  <!-- 2. Configure SystemJS -->
+
   <script>
     System.config({
       packages: {
