--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>Start</title>
+    <title>Calorie Track</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="build/js/vendor.min.js"></script>
     <link rel="stylesheet" href="build/css/vendor.css">
-    <link rel="stylesheet" href="resources/styles/styles.css">
+    <link rel="stylesheet" href="build/css/styles.css">
+    <script src="build/js/vendor.min.js"></script>
+
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
@@ -14,6 +15,7 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <link rel="icon" href="resources/images/tabIcon.png">
   </head>
 
 
