--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Calorie Track</title>
+    <title>Calorie Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="build/css/vendor.css">
     <link rel="stylesheet" href="build/css/styles.css">
@@ -16,6 +16,8 @@
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
     <link rel="icon" href="resources/images/tabIcon.png">
+    <!--Google Fonts-->
+    <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   </head>
 
 
@@ -35,4 +37,18 @@
     System.import('app/main')
           .then(null, console.error.bind(console));
   </script>
+
+  <footer>
+    <sup>&copy;</sup>Kevin Mattison
+
+    <a href="https://github.com/KevinExplosion">
+      <img src="resources/images/github.png" alt="gitHub logo">
+    </a>
+    <a href="https://github.com/KevinExplosion/calorieTracker">
+      <img src="resources/images/tabIcon.png" alt="heart apple logo">
+    </a>
+    <a href="https://www.linkedin.com/in/kevin-mattison-57877266">
+      <img src="resources/images/linkedin.png" alt="linkedIn logo">
+    </a>
+</footer>
 </html>
